2008-03-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* coding.c (decode_coding_object): Fix last change.

2008-03-27  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (start_hourglass): Suppress hourglass on tty frames.

2008-03-27  Kenichi Handa  <handa@ni.aist.go.jp>

	* charset.c (Fdefine_charset_internal): Change the way of
	registering charsets in Vcharset_order_list.
	(syms_of_charset): Make the charset `eight-bit' supplementary.

2008-03-26  Alexandre Oliva  <aoliva@redhat.com>  (tiny change)

	* regex.c (EXTEND_BUFFER): Change order of pointer addition
	operations, to avoid having the difference between pointers
	overflow.

2008-03-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* indent.c (check_display_width): New fun.
	(scan_for_column): Use it.

	* data.c (syms_of_data): Mark most-positive-fixnum and
	most-negative-fixnum as constants.

	* xdisp.c (redisplay_internal): Reset selected_frame earlier.

	* indent.c (scan_for_column): Extract from current_column_1.
	Merge with the same code from Fmove_to_column.
	(current_column_1, Fmove_to_column): Use it.

2008-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (map_keymap_internal): New fun.
	(map_keymap): Use it.
	(Fmap_keymap_internal): New fun.
	(Fmap_keymap): Remove left-out test from before make_save_value.

	* keymap.c (Fmap_keymap): Use `map-keymap-sorted.

	* frame.c (Fmodify_frame_parameters, x_set_frame_parameters):
	Use XCAR/XCDR.

	* process.h (struct Lisp_Process): Remove filter_multibyte.
	* process.c (QCfilter_multibyte): Remove.
	(setup_process_coding_systems): Don't use filter_multibyte.
	(Fstart_process, Fmake_network_process): Don't set filter_multibyte.
	(read_process_output): Don't adjust multibyteness to filter_multibyte.
	(Fset_process_filter_multibyte): Change the coding-system to
	approximate the previous behavior.
	(Fprocess_filter_multibyte_p): Get the multibyteness straight from the
	coding-system.
