@@ -1,5 +1,8 @@
 2008-03-27  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* process.c (server_accept_connection): Simplify naming.
+	(emacs_get_tty_pgrp): Use SDATA.
+
 	* coding.c (decode_coding_object): Fix last change.
 
 2008-03-27  Jason Rumney  <jasonr@gnu.org>
